--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "firebase": "^9.8.3",
+    "firebaseui": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
