--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "firebase": "^9.8.3",
+    "firebase": "^8.10.0",
     "firebaseui": "^6.0.1",
     "openai": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-event-observer": "^0.5.11",
     "react-query-firestore": "^0.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
